--- a/scripts/Analysis/SUMMARY/header_summary.Rmd
+++ b/scripts/Analysis/SUMMARY/header_summary.Rmd
@@ -5,7 +5,8 @@ author: "`r Sys.getenv('LOGNAME')`"
 output:
   rmdformats::readthedown:
     code_folding: show
-    self_contained: true
+    embed-resources: true
+    standalone: true
     thumbnails: false
     lightbox: false
 pkgdown:
