--- a/scripts/Analysis/SUMMARY/header_summary.Rmd
+++ b/scripts/Analysis/SUMMARY/header_summary.Rmd
@@ -5,7 +5,7 @@ author: "`r Sys.getenv('LOGNAME')`"
 output:
   rmdformats::readthedown:
     code_folding: show
-    embed-resources: true
+    embed_resources: true
     standalone: true
     thumbnails: false
     lightbox: false
