summary.rmd self_contained: false

--- a/scripts/Analysis/SUMMARY/header_summary.Rmd
+++ b/scripts/Analysis/SUMMARY/header_summary.Rmd
@@ -5,8 +5,7 @@ author: "`r Sys.getenv('LOGNAME')`"
 output:
   rmdformats::readthedown:
     code_folding: show
-    embed_resources: true
-    standalone: true
+    self_contained: false
     thumbnails: false
     lightbox: false
 pkgdown:
